The navbar was made for mobile and desktop devices, but it is not finished yet, there is one component left that is necessary to create to improve the ease of maintenance

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,21 +1,1 @@
-@use "../sass_partials" as *;
-
-@mixin set-text($size, $weigth, $color) {
-  font-size: $size;
-  font-weight: $weigth;
-  color: $color;
-}
-
-.main {
-  h1 {
-    @include set-text($text-sm, 300, $primary-color);
-  }
-
-  h2 {
-    @include set-text($text-md, 400, $secondary-color);
-  }
-
-  h3 {
-    @include set-text($text-xlg, 700, $primary-color);
-  }
-}
+@use "@/sass_partials" as *;
