--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,15 +1,13 @@
-@use "../sass_partials" as *;
-
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    background-color: $light-color;
+  padding: 0 10%;
 }
