--- a/components/MobileMenu/MobileMenu.module.scss
+++ b/components/MobileMenu/MobileMenu.module.scss
@@ -10,10 +10,11 @@
   padding: 20px 10% 0;
   position: absolute;
   left: 0;
-  top: 80px;
+  top: 70px;
   list-style: none;
   border-right: 1px solid #ccc;
   z-index: 10;
+  background-color: #fff;
 
   li {
     margin-bottom: 40px;
